[gd_scene format=3 uid="uid://dse8n8vbhfch8"]

[ext_resource type="Script" uid="uid://ct0265qwp8xoe" path="res://scripts/ui/tutorial_overlay.gd" id="1_tutorial"]
[ext_resource type="FontFile" uid="uid://xqiy7ijtjsrv" path="res://assets/fonts/VT323-Regular.ttf" id="2_font"]

[node name="TutorialOverlay" type="CanvasLayer" unique_id=1470784220]
layer = 100
script = ExtResource("1_tutorial")

[node name="FullscreenDim" type="ColorRect" parent="." unique_id=98669462]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0.05, 0.55)

[node name="PromptContainer" type="Control" parent="." unique_id=798668242]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PromptPanel" type="PanelContainer" parent="PromptContainer" unique_id=1788686735]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -120.0
offset_right = 280.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PromptContainer/PromptPanel" unique_id=1222598700]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PromptContainer/PromptPanel/MarginContainer" unique_id=990554659]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="HeaderContainer" type="HBoxContainer" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer" unique_id=1341939149]
layout_mode = 2
mouse_filter = 2

[node name="TutorialIcon" type="Label" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer/HeaderContainer" unique_id=116739225]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = ">>"

[node name="TitleLabel" type="Label" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer/HeaderContainer" unique_id=772787625]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = " COMMANDER'S BRIEFING"

[node name="StepCounter" type="Label" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer/HeaderContainer" unique_id=1728293870]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.5, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "[1/9]"

[node name="HSeparator" type="HSeparator" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer" unique_id=39890932]
layout_mode = 2
mouse_filter = 2

[node name="ContentLabel" type="Label" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer" unique_id=881455184]
custom_minimum_size = Vector2(480, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Tutorial content goes here. This is a test message that explains what the player should do next."
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer" unique_id=2073361868]
layout_mode = 2
mouse_filter = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer" unique_id=628271653]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30
alignment = 1

[node name="GotItButton" type="Button" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1508011646]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1.0, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.4, 1.0, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "[ GOT IT ]"

[node name="SkipButton" type="Button" parent="PromptContainer/PromptPanel/MarginContainer/VBoxContainer/ButtonContainer" unique_id=180586323]
custom_minimum_size = Vector2(180, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.3, 0.3, 1)
theme_override_colors/font_hover_color = Color(0.6, 0.4, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "[ SKIP TUTORIAL ]"

[node name="ArrowIndicator" type="Label" parent="PromptContainer" unique_id=12008270]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 130.0
offset_right = 30.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "V"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PulseTimer" type="Timer" parent="." unique_id=243943904]
wait_time = 0.8
autostart = true
